--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -19,6 +19,7 @@ a {
     width: 100%;
     height: 100vh;
     z-index: -1;
+    animation: introLoad 2s forwards;
     //overflow: hidden;
 }
 
@@ -86,12 +87,17 @@ h1{
 section.hero {
     color: white;
     height: 90vh;
+    animation: moveDown 1s ease-in-out forwards;
+    opacity: 0;
 
-    svg{
+    .down-arrow {
         stroke: white;
         position: absolute;
-        bottom: 4em;
+        margin: .5em;
+        margin-top: 4em;
+        bottom: 8em;
         width: 1em;
+        animation: moveArrow 1s alternate-reverse infinite;
 
         path{
             fill: white;
@@ -235,5 +241,31 @@ section.hero {
 
     .feature {
         gap: 0;
+    }
+}
+
+@keyframes introLoad {
+    from {
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+    to {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
+}
+@keyframes moveArrow {
+    from {
+        transform: translateY(-50px);
+    }
+    to {
+        transform: translateY(0);    
+    }
+}
+@keyframes moveDown {
+    from {
+        transform: translateY(-100px);
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;    
     }
 }
